# openstackup

./: .gitignore  CMakeLists.txt  README.md
assets/: openstackup_logo.ai
plugins/eagle/: os-sync.ulp
src/: CMakeLists.txt  delaymatchsolver.h  enums.cxx  enums.h  layer.cxx  layer.h  main.cxx  manager.h  material.cxx  material.h  materialmanager.cxx  materialmanager.h  materialmodel.cxx  materialmodel.h  net.cxx  net.h  netclass.cxx  netclass.h  netclassmodel.cxx  netclassmodel.h  netmodel.cxx  netmodel.h  permittivitydelegate.cxx  permittivitydelegate.h  permittivitymodel.cxx  permittivitymodel.h  pluginserver.cxx  pluginserver.h  resources.qrc  sessionmanager.cxx  sessionmanager.h  signalpropagationdelaymodel.cxx  signalpropagationdelaymodel.h  signalpropagationdelayproxymodel.cxx  signalpropagationdelayproxymodel.h  stackupdelegate.cxx  stackupdelegate.h  stackupmodel.cxx  stackupmodel.h  stackupproxymodel.cxx  (+16 more)
targets/: target_win64.cmake
